--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Home page of the Rainy Days site, We sell good quality rainwear for your all year wear.">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
+    <script type="module" src="Javascript/index.js" defer></script>
+    <script type="module" src="Javascript/utils.js" defer></script>
 </head>
 <body>
 
@@ -47,52 +49,8 @@
     </div>
 
     <h2>Top Sellers</h2>
-    <div class="topsellers">
-        <div class="jacket-container">
-            <div>
-                <a href="jacketlist.html">
-                    <img src="Bilder/RainyDays_Jacket1.png" alt="Cycle jacket rain">
-                    <p class="jacketname">Rainy Days Cycle Jacket</p>
-                    <p>500 USD</p>
-                </a>
-                <div class="color-container">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-            </div>
-        </div>
+    <div id="topSellers"></div>
 
-        <div class="jacket-container">
-            <div>
-                <a href="jacketspecific.html">
-                    <img src="Bilder/RainyDays_Jacket7.png" alt="Fleece jacket rain">
-                    <p class="jacketname">Rainy Days Fleece Jacket</p>
-                    <p>250 USD</p>
-                </a>
-                <div class="color-container">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-            </div>
-        </div>
-        
-        <div class="jacket-container">
-            <div>
-                <a href="jacketspecific.html">
-                    <img src="Bilder/RainyDays_Jacket6.png" alt="Hiker jacket rain">
-                    <p class="jacketname">Rainy Days Hiker Jacket</p>
-                    <p>1500 USD</p>
-                </a>
-                <div class="color-container">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                </div>
-            </div>
-        </div>
-    </div>
 </main>
 <footer>
    <div class="col-1">
