--- a/jacketlist.html
+++ b/jacketlist.html
@@ -44,11 +44,14 @@
       
       <h1 class="jackettitle">Jackets</h1>
 
-      <select id="jacketFilter">
-        <option value="none">Select Filter</option>
-        <option value="Female">Female</option>
-        <option value="Male">Male</option>
-      </select>
+      <div class="filterSystem">
+        <p></p>
+        <select id="jacketFilter">
+            <option value="none">Select Filter</option>
+            <option value="Female">Female</option>
+            <option value="Male">Male</option>
+        </select>
+      </div>
 
       <div class="jacketlist-container">
         <div id="productList"></div>
