--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Your shoppingcart on the rainy days website">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
+    <script type="module" src="Javascript/cart.js" defer></script>
+    <script type="module" src="Javascript/utils.js" defer></script>
 </head>
 <body>
 
@@ -57,7 +59,7 @@
                 Returns are easy! Everyone gets free online and in-store returns.
             </p>
         </div>
-            <div class="checkout-box">
+            <div id="checkout-box">
                     
             </div>
         </div>
