checkout form required

--- a/checkout.html
+++ b/checkout.html
@@ -58,8 +58,8 @@
                     <li>Payment Method: Visa **** 1234</li>
                 </ul>
                 <h2>Items Ordered:</h2>
-                <ul>
-                    <li>Rainy Days Fleece Jacket (1)</li>
+                <ul class="orderedItems">
+                    
                 </ul>
                 <h2>Shipping Information:</h2>
                 <ul>
