--- a/cart.html
+++ b/cart.html
@@ -41,7 +41,7 @@
     <main class="cart-main">
         <div class="cart-form">
             <p>*Required Fields</p>
-            <form id="cart-form">
+            <form id="cartForm">
                 <input type="text" placeholder="First Name*" required>
                 <input type="text" placeholder="Last Name*" required>
                 <input type="Email" placeholder="Email Adress*" required>
