--- a/jacketlist.html
+++ b/jacketlist.html
@@ -6,6 +6,7 @@
     <title>Jacketlist</title>
     <meta name="description" content="List of Jackets and wear on the rainy days website">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="loading" type="text/css" href="loading.css">
     <script src="https://kit.fontawesome.com/e589204446.js" crossorigin="anonymous"></script>
     <script type="module" src="Javascript/jacketList.js" defer></script>
     <script type="module" src="Javascript/utils.js" defer></script>
