--- a/cart.html
+++ b/cart.html
@@ -42,12 +42,11 @@
         <div class="cart-form">
             <p>*Required Fields</p>
             <form id="cartForm">
-                <input type="text" placeholder="First Name*" required>
-                <input type="text" placeholder="Last Name*" required>
+                <input type="text" name="name" placeholder="Full Name*" required>
                 <input type="Email" placeholder="Email Adress*" required>
-                <input type="text" placeholder="City*" required>
-                <input type="text" placeholder="Zip Code*" required>
-                <input type="text" placeholder="Adress Line*" required>
+                <input type="text" name="shippingCity" placeholder="City*" required>
+                <input type="text" name="shippingZip" placeholder="Zip Code*" required>
+                <input type="text" name="shippingAdress" placeholder="Adress Line*" required>
                 <input type="number" placeholder="Phone Nr*" required>
             </form>
             <p>
