--- a/checkout.html
+++ b/checkout.html
@@ -54,9 +54,10 @@
             <div>
                 <h2>Order Details:</h2>
                 <ul>
+                    <li>Thank you <p id="name"></p> for ordering at Rainy Days</li>
                     <li>Order Number: RD2023-12345</li>
                     <li>Date: September 18, 2023</li>
-                    <li>Shipping Address: [Your Shipping Address]</li>
+                    <li>Shipping Address: <p class="shippingAdress"></p></li>
                     <li>Payment Method: Visa **** 1234</li>
                 </ul>
                 <h2>Items Ordered:</h2>
@@ -67,7 +68,7 @@
 
                 <h2>Shipping Information:</h2>
                 <ul>
-                    <li>Your order will be shipped within [2-5 days] to the following address: [Fannrem]</li>
+                    <li>Your order will be shipped within [2-5 days] to the following address: <p class="shippingAdress"></p></li>
                 </ul>
                 <h2>Estimated Delivery Date:</h2>
                 <ul>
